--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ body {
   /* Tamaño */
   height: 500px;
   width: 100%;
+  box-sizing: border-box;
 
   /* Posición */
-  box-sizing: border-box;
   display: grid;
   justify-items: center;
   align-items: center;
@@ -36,25 +36,31 @@ body {
   /* Tamaño */
   height: 300px;
   width: 300px;
-  border-radius: 50%;
-  border: 5px solid black;
 
   /* Fondo */
   background-color: rgb(var(--kirby-main-color-rgb));
 
-  grid-area: cabeza;
+  /* Borde */
+  border-radius: 50%;
+  border: 5px solid black;
+
   /* Posición */
+  grid-area: cabeza;
+
   display: grid;
   justify-items: center;
-
   grid-template-columns: 80px 25px 25px 40px 25px 25px 80px;
   grid-template-rows: 50px 100px 25px 75px 50px;
   grid-template-areas: '. . . . . . .' '. o1 o1 . o2 o2 .' 'm1 m1 . . . m2 m2' '. . . boca . . .' ' . . . . . . .';
 }
 
 .ojos {
+  /* Tamaño */
   height: 100px;
   width: 50px;
+  box-sizing: border-box;
+
+  /* Fondo */
   background-image: linear-gradient(
     rgba(0, 0, 0),
     20%,
@@ -62,35 +68,51 @@ body {
     rgb(93, 199, 169)
   );
 
+  /* Borde y sombra */
   border-radius: 50%;
   border: 3px solid;
-  box-sizing: border-box;
-  position: relative;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.4) inset;
 
+  /* Posición */
+  position: relative;
+
   &::before {
+    /* Tamaño */
+    height: 60px;
+    width: 40px;
+
+    /* Fondo */
+    background-color: black;
+
+    /* Borde y sombra */
+    border-radius: 50%;
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0);
+
+    /* Posición */
     position: absolute;
     content: '';
     box-sizing: border-box;
-    height: 60px;
-    width: 40px;
     left: 2px;
-    border-radius: 50%;
-    background-color: black;
-    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0);
   }
 
   &::after {
+    /* Tamaño */
+    height: 40px;
+    width: 30px;
+
+    /* Fondo */
+    background-color: rgba(255, 255, 255);
+
+    /* Borde y sombra */
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.4) inset;
+
+    /* Posición */
     position: absolute;
     content: '';
     box-sizing: border-box;
-    height: 40px;
-    width: 30px;
     left: 7px;
     top: 2px;
-    background-color: rgba(255, 255, 255);
-    border-radius: 50%;
-    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.4) inset;
   }
 }
 
@@ -103,9 +125,14 @@ body {
 }
 
 .mofletes {
+  /* Tamaño */
   width: 70px;
   height: 35px;
+
+  /* Fondo */
   background-color: rgb(var(--kirby-mofletes-color-rgb), 0.8);
+
+  /* Borde */
   border-radius: 50%;
 }
 
@@ -120,24 +147,38 @@ body {
 }
 
 .boca {
-  grid-area: boca;
+  /* Tamaño */
   height: 60px;
   width: 50px;
+
+  /* Fondo */
   background-color: rgb(0, 0, 0, 0.5);
+
+  /* Borde */
   border-radius: 5px 5px 25px 25px;
   border: 3px solid;
-  box-sizing: border-box;
+
+  /* Posición */
+  grid-area: boca;
   position: relative;
+  box-sizing: border-box;
 
   &::before {
-    position: absolute;
-    content: '';
+    /* Tamaño */
     height: 34px;
     width: 45px;
+    box-sizing: border-box;
+
+    /* Fondo */
     background-color: rgb(var(--kirby-mofletes-color-rgb));
+
+    /* Borde */
     border-radius: 50%;
     border: 3px solid;
-    box-sizing: border-box;
+
+    /* posición */
+    position: absolute;
+    content: '';
     bottom: -2px;
   }
 }
@@ -186,14 +227,21 @@ body {
   position: relative;
 
   &::before {
+    /* Tamaño */
     height: 40px;
     width: 30px;
+
+    /* Fondo */
+    background-color: rgb(251, 99, 111);
+
+    /* Borde */
+    border-radius: 50%;
+
+    /* Posición */
     position: absolute;
     content: '';
-    background-color: rgb(251, 99, 111);
     top: 30px;
     left: 10px;
-    border-radius: 50%;
     transform: rotate(-40deg);
   }
 }
@@ -202,14 +250,19 @@ body {
   grid-area: p2;
 
   &::before {
+    /* Tamaño */
     height: 40px;
     width: 30px;
+
+    /* Fondo y borde */
+    background-color: rgb(251, 99, 111);
+    border-radius: 50%;
+
+    /* Posición */
     position: absolute;
     content: '';
-    background-color: rgb(251, 99, 111);
     top: 30px;
     right: 10px;
-    border-radius: 50%;
     transform: rotate(40deg);
   }
 }
